--- a/Audio Visualizer/MainWindow.xaml
+++ b/Audio Visualizer/MainWindow.xaml
@@ -7,26 +7,30 @@
         mc:Ignorable="d"
         WindowState="Maximized"
         WindowStyle="None"
+        AllowsTransparency="True"
         Closed="Window_Closed"
         Loaded="Window_Loaded"
         Icon="Resources/Audio Visualizer Icon.ico"
         Title="Audio Visualizer" Height="450" Width="800">
     <Window.Background>
-        <SolidColorBrush Opacity="0.5" Color="Transparent" />
+        <SolidColorBrush Opacity="0" Color="Transparent" />
     </Window.Background>
 
     <DockPanel>
-        <DockPanel.Background>
-            <SolidColorBrush Opacity="0" Color="Transparent" />
-        </DockPanel.Background>
-
-        <Canvas x:Name="Visualizer" Background="#44000000">
+        <Canvas x:Name="Visualizer" Background="#FF000000">
             <Canvas.ContextMenu>
                 <ContextMenu>
                     <MenuItem x:Name="AudioInputControl"  Header="Audio Input">
                         <MenuItem Header="None" Checked="AudioInputMenuItem_Checked" IsCheckable="True" />
                         <MenuItem Header="System" Checked="AudioInputMenuItem_Checked" IsCheckable="True" />
                         <MenuItem Header="Microphone" Checked="AudioInputMenuItem_Checked" IsCheckable="True" />
+                    </MenuItem>
+                    <MenuItem x:Name="TransparentlyControl"  Header="Background opacity">
+                        <MenuItem Header="0%" Checked="TransparentlyControl_Checked" IsCheckable="True" />
+                        <MenuItem Header="25%" Checked="TransparentlyControl_Checked" IsCheckable="True" />
+                        <MenuItem Header="50%" Checked="TransparentlyControl_Checked" IsCheckable="True" />
+                        <MenuItem Header="75%" Checked="TransparentlyControl_Checked" IsCheckable="True" />
+                        <MenuItem Header="100%" Checked="TransparentlyControl_Checked" IsCheckable="True" />
                     </MenuItem>
                     <Separator/>
                     <MenuItem Header="Exit" Click="Exit_Click" />
